@@ -1,0 +1,67 @@
+//
+// EndPointTest.cs - Unit tests for System.Net.EndPoint
+//
+// Author:
+//	Sebastien Pouliot  <sebastien@ximian.com>
+//
+// Copyright (C) 2009 Novell, Inc (http://www.novell.com)
+//
+// Permission is hereby granted, free of charge, to any person obtaining
+// a copy of this software and associated documentation files (the
+// "Software"), to deal in the Software without restriction, including
+// without limitation the rights to use, copy, modify, merge, publish,
+// distribute, sublicense, and/or sell copies of the Software, and to
+// permit persons to whom the Software is furnished to do so, subject to
+// the following conditions:
+// 
+// The above copyright notice and this permission notice shall be
+// included in all copies or substantial portions of the Software.
+// 
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+// LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+// OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+// WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+//
+
+using NUnit.Framework;
+
+using System;
+using System.Net;
+
+namespace MonoTests.System.Net {
+
+	[TestFixture]
+	public class EndPointTest {
+
+		class ConcreteEndPoint : EndPoint {
+		}
+
+		[Test]
+		[ExpectedException (typeof (NotImplementedException))]
+		public void AddressFamily ()
+		{
+			ConcreteEndPoint ep = new ConcreteEndPoint ();
+			Assert.IsNotNull (ep.AddressFamily);
+		}
+
+		[Test]
+		[ExpectedException (typeof (NotImplementedException))]
+		public void Create ()
+		{
+			ConcreteEndPoint ep = new ConcreteEndPoint ();
+			Assert.IsNotNull (ep.Create (null));
+		}
+
+		[Test]
+		[ExpectedException (typeof (NotImplementedException))]
+		public void Serialize ()
+		{
+			ConcreteEndPoint ep = new ConcreteEndPoint ();
+			Assert.IsNotNull (ep.Serialize ());
+		}
+	}
+}
+
